--- a/font.css
+++ b/font.css
@@ -108,6 +108,6 @@ padding-left: 0;
         li {
         margin-bottom:10px;
         }
-        li.nomargin {
+        ul.nomargin li{
         	margin:0;
         }
